@@ -1,3 +1,9 @@
+Tue Sep 13 18:37:08 2016  Koichi Sasada  <ko1@atdot.net>
+
+	* test/ruby/test_exception.rb: fix thread issues.
+	  * use Queue instead of a local variable for synchronization.
+	  * join created thread to soleve leaking threads warning.
+
 Tue Sep 13 16:07:26 2016  Kazuki Yamaguchi  <k@rhe.jp>
 
 	* string.c (rb_str_set_len): The buffer overflow check is wrong. The
